...
  _StatisticsLeaveState createState() => _StatisticsLeaveState();
}

class _StatisticsLeaveState extends State<StatisticsLeave> {
  final GetSalInfo api = GetSalInfo();
  List<String> listOf = [
    "Allocated Leaves",
    "Leave Balance",
    "Total Leaves Taken",
    "Paid Leaves Taken",
    "Unpaid Leaves Taken",
  ];
  List<dynamic> numOf = [];
...
