...
}

class _DropDownState extends State<DropDown> {
  List<ListItem> _dropdownItems = [
    ListItem(1, "2017"),
    ListItem(2, "2018"),
    ListItem(3, "2019"),
    ListItem(4, "2020")
  ];

  List<DropdownMenuItem<ListItem>> _dropdownMenuItems;
  ListItem _selectedItem;

  void initState() {
...
