...
class _DropDownState extends State<DropDown> {
  final Function(String) onLeaveChange;
  final Function(List<String>) onRHChange;
  _DropDownState({this.onLeaveChange, this.onRHChange});
  List<ListItem> _dropdownItems = [
    ListItem(1, "Leave Option"),
    ListItem(2, "Casual"),
    ListItem(3, "Sick"),
    ListItem(4, "RH Compensation")
  ];
  bool showRH = false;
  bool borderColor = false;

...
